--- a/demos/objects/helpful-links/index.html
+++ b/demos/objects/helpful-links/index.html
@@ -6,15 +6,23 @@ excerpt: Helpful Links
 
 
 
-<h2>Title</h2>
+<h2>Helpful links in the middle</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias consectetur hic, omnis eveniet nostrum delectus, porro minima in magnam animi perferendis consequuntur unde ut eaque cupiditate provident! Rem, beatae, saepe!</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, itaque corporis sed magnam labore pariatur voluptatum provident voluptatibus illo facere, quod cum. Deserunt et officiis reprehenderit quas aspernatur, aliquid quod.</p>
+<div class="helpful-links middle">
+<ul>
+	<li><a href="">Helpful Link 1</a></li>
+	<li><a href="">Helpful Link 2</a></li>
+	<li><a href="">Helpful Link 3</a></li>
+	<li><a href="">Helpful Link 4</a></li>
+</ul>
+</div>
 <p>Eos veniam impedit corrupti totam, earum eveniet alias doloribus quod consequatur blanditiis tempore iste? Voluptate, ipsam. Ipsa obcaecati aspernatur nulla eaque. Aliquam doloremque, sequi corporis, inventore deleniti repellendus temporibus assumenda!</p>
-<h2>Title</h2>
+<h2>Helpful links at the bottom</h2>
 <p>Id voluptatibus assumenda ipsam harum sequi, dolorem sed laudantium veritatis vero fuga natus repellendus sint delectus culpa quis similique, hic labore facilis praesentium explicabo nobis soluta nihil dolor enim obcaecati?</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, itaque corporis sed magnam labore pariatur voluptatum provident voluptatibus illo facere, quod cum. Deserunt et officiis reprehenderit quas aspernatur, aliquid quod.</p>
 <p>Eos veniam impedit corrupti totam, earum eveniet alias doloribus quod consequatur blanditiis tempore iste? Voluptate, ipsam. Ipsa obcaecati aspernatur nulla eaque. Aliquam doloremque, sequi corporis, inventore deleniti repellendus temporibus assumenda!</p>
-<div class="helpful-links">
+<div class="helpful-links bottom">
 <ul>
 	<li><a href="">Helpful Link 1</a></li>
 	<li><a href="">Helpful Link 2</a></li>
@@ -24,9 +32,5 @@ excerpt: Helpful Links
 </div>
 <h2>A Title</h2>
 <p>Consectetur, temporibus quasi similique, deleniti inventore ipsa mollitia reprehenderit aperiam tempora error quas eligendi. Dolorum totam, commodi impedit perferendis cupiditate dolor, voluptate quidem sint molestias nam ut incidunt voluptatem doloremque.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, itaque corporis sed magnam labore pariatur voluptatum provident voluptatibus illo facere, quod cum. Deserunt et officiis reprehenderit quas aspernatur, aliquid quod.</p>
-<p>Eos veniam impedit corrupti totam, earum eveniet alias doloribus quod consequatur blanditiis tempore iste? Voluptate, ipsam. Ipsa obcaecati aspernatur nulla eaque. Aliquam doloremque, sequi corporis, inventore deleniti repellendus temporibus assumenda!</p>
-<h2>A Title</h2>
-<p>Ducimus sint et facere inventore illum hic deleniti officiis maxime ad consequuntur blanditiis tenetur provident eius saepe necessitatibus, quam, exercitationem. Et praesentium, sunt consectetur quisquam labore quidem beatae cumque qui.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, itaque corporis sed magnam labore pariatur voluptatum provident voluptatibus illo facere, quod cum. Deserunt et officiis reprehenderit quas aspernatur, aliquid quod.</p>
 <p>Eos veniam impedit corrupti totam, earum eveniet alias doloribus quod consequatur blanditiis tempore iste? Voluptate, ipsam. Ipsa obcaecati aspernatur nulla eaque. Aliquam doloremque, sequi corporis, inventore deleniti repellendus temporibus assumenda!</p>
