--- a/demos/objects/index.html
+++ b/demos/objects/index.html
@@ -1,55 +1,14 @@
 ---
 template: default.html
-title: Base Styles
-excerpt: Base Styles
+title: Objects
+excerpt: Objects
 ---
 
-<h2>Headings</h2>
-<div class="demo-box">
-<h1>h1 Heading 1</h1>
-<h2>h2 Heading 2</h2>
-<h3>h3 Heading 3</h3>
-<h4>h4 Heading 4</h4>
-</div>
 
-<h2>Paragraphs</h2>
-<div class="demo-box">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo repellat praesentium magnam ea hic optio placeat unde eveniet recusandae ratione consequatur impedit voluptatem dolorem iusto totam aliquam, nisi perspiciatis officia!</p>
-<p>Aperiam, culpa error iste enim saepe cumque quae vitae eligendi, debitis labore nulla, praesentium ad velit. Ipsum aspernatur, laudantium quam, dolorum sint ea vel aperiam maiores. Ex at ratione, dolore.</p>
-</div>
-<h2>Lists</h2>
-
-<h3>Unordered List</h3>
-<div class="demo-box">
-<ul>
-	<li>List item</li>
-	<li>List item</li>
-	<li>List item</li>
-	<li>List item</li>
-	<li>List item</li>
-</ul>
-</div>
-<h3>Ordered List</h3>
-<div class="demo-box">
-<ol>
-	<li>List item</li>
-	<li>List item</li>
-	<li>List item</li>
-	<li>List item</li>
-	<li>List item</li>
-</ol>
-</div>
-<h3>Definition List</h3>
-<div class="demo-box">
-<dl>
-	<dt>Definition term</dt>
-	<dd>Definition</dd>
-	<dt>Definition term</dt>
-	<dd>Definition</dd>
-</dl>
-</div>
-<h2>Links</h2>
-<div class="demo-box">
-<a href="">I'm a link</a>
-</div>
-
+    
+    <h2><a href="{{ site.baseUrl }}demos/objects/page-anchors/">Page Anchors</a></h2>
+    <h2><a href="{{ site.baseUrl }}demos/objects/helpful-links/">Helpful Links</a></h2>
+    <h2><a href="{{ site.baseUrl }}demos/objects/images/">Images</a></h2>
+    <h2><a href="{{ site.baseUrl }}demos/objects/tables/">Tables</a></h2>
+   
+ 
