--- a/index.html
+++ b/index.html
@@ -1,31 +1,9 @@
 ---
-template: home.html
+template: default.html
 ---
 
 <section>
-<div class="Container">
-<h2>Page Navigation</h2>
-<div>
-{% include 'snippets/page-navigation.html' %}
-</div>
-</div>
-</section>
-
-
-<section>
-<div class="Container">
-<h2>Helpful Links</h2>
-<div>
-{% include 'helpful-links.html' %}
-</div>
-</div>
-</section>
-
-<section>
-<div class="Container">
-<h2>Contact Cards</h2>
-<div>
-{% include 'snippets/contact-cards.html' %}
-</div>
-</div>
+<h2><a href="{{ site.baseUrl }}demos/base/">Base styles</a></h2>
+<h2><a href="{{ site.baseUrl }}demos/objects/">Objects</a></h2>
+<h2><a href="{{ site.baseUrl }}demos/components/">Components</a></h2>
 </section>
